--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </section>
       <section class="data">
-        <p class="price">0.041 ETH </p>
-        <p class="time">3 days left</p>
+        <p class="price">
+          <img src="./assets/images/icon-ethereum.svg" alt="etherium" />
+          0.041 ETH 
+        </p>
+        <p class="time">
+          <img src="./assets/images/icon-clock.svg" alt="clock" />
+          3 days left
+        </p>
       </section>
       <hr />
       <section class="credit">
