--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="data">
         <p class="price">
           <img src="./assets/images/icon-ethereum.svg" alt="etherium" />
-          0.041 ETH 
+          0.041 ETH
         </p>
         <p class="time">
           <img src="./assets/images/icon-clock.svg" alt="clock" />
@@ -48,11 +48,16 @@
       </section>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      >. Coded by
+      <a
+        href="https://github.com/elorenn/qr-code-component-main"
+        target="_blank"
+        >Lo</a
+      >.
+    </footer>
   </body>
 </html>
