change figure to div '

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <main class="card">
-      <figure class="img-wrapper">
+      <div class="img-wrapper">
         <img src="./assets/images/image-equilibrium.jpg" alt="ntf" />
-      </figure>
+      </div>
       <section>
         <h1>Equilibrium #3429</h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
